feat: add services to mean project
Add actions as services to mean project

--- a/mean/src/app/app.component.html
+++ b/mean/src/app/app.component.html
@@ -1,5 +1,5 @@
 <client-header></client-header>
 <main>
-    <client-insert (clientAdded)="onClientAdded($event)"></client-insert>
-    <client-list [clients]="clients"></client-list>
+    <client-insert></client-insert>
+    <client-list></client-list>
 </main>
