--- a/mean/src/app/components/client-list/client-list.component.html
+++ b/mean/src/app/components/client-list/client-list.component.html
@@ -5,6 +5,14 @@
         </mat-expansion-panel-header>
         <p>Phone: {{ client.phone }}</p>
         <p>Email: {{ client.email }}</p>
+        <mat-action-row>
+            <button mat-button color="primary">
+                EDITAR
+            </button>
+            <button mat-button color="warn">
+                REMOVER
+            </button>
+        </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
 <p
