feat: add delete action to client form
Add route module to the project

--- a/mean/src/app/app.component.html
+++ b/mean/src/app/app.component.html
@@ -1,5 +1,4 @@
 <client-header></client-header>
 <main>
-    <client-insert></client-insert>
-    <client-list></client-list>
+    <router-outlet></router-outlet>
 </main>
