--- a/mean/src/app/components/client-header/client-header.component.html
+++ b/mean/src/app/components/client-header/client-header.component.html
@@ -1,3 +1,14 @@
 <mat-toolbar color="primary">
-    Clients
+    <span>
+        <a routerLink="/">
+            Clients
+        </a>
+    </span>
+    <ul>
+        <li>
+            <a routerLink="/create">
+                New Client
+            </a>
+        </li>
+    </ul>
 </mat-toolbar>
