--- a/mean/src/app/components/client-list/client-list.component.html
+++ b/mean/src/app/components/client-list/client-list.component.html
@@ -7,10 +7,13 @@
         <p>Email: {{ client.email }}</p>
         <mat-action-row>
             <button mat-button color="primary">
-                EDITAR
+                EDIT
             </button>
-            <button mat-button color="warn">
-                REMOVER
+            <button
+                mat-button color="warn"
+                (click)="onDelete(client.clientId)"
+            >
+                REMOVE
             </button>
         </mat-action-row>
     </mat-expansion-panel>
