--- a/mean/src/app/components/client-header/client-header.component.html
+++ b/mean/src/app/components/client-header/client-header.component.html
@@ -4,9 +4,14 @@
             Clients
         </a>
     </span>
+    <span class="separator"></span>
     <ul>
         <li>
-            <a routerLink="/create">
+            <a
+                routerLink="/create"
+                routerLinkActive="mat-accent"
+                mat-button
+            >
                 New Client
             </a>
         </li>
