--- a/mean/src/app/components/client-list/client-list.component.html
+++ b/mean/src/app/components/client-list/client-list.component.html
@@ -1,4 +1,5 @@
-<mat-accordion *ngIf="clients.length>0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion *ngIf="clients.length>0 && !isLoading">
     <mat-expansion-panel *ngFor="let client of clients">
         <mat-expansion-panel-header>
             Name: {{ client.name }}
@@ -23,7 +24,7 @@
     </mat-expansion-panel>
 </mat-accordion>
 <p
-    *ngIf="clients.length<=0"
+    *ngIf="clients.length<=0 && !isLoading"
     class="mat-body-1"
     style="text-align: center;"
 >
