feat: add file image file data type handle

--- a/mean/src/app/components/client-insert/client-insert.component.html
+++ b/mean/src/app/components/client-insert/client-insert.component.html
@@ -29,6 +29,14 @@
             <input
                 type="file"
                 #selectFile
+                (change)="onImageSelected($event)"
+            />
+        </div>
+        <div class="image-preview">
+            <img
+                *ngIf="previewImage && previewImage !== '' && form.get('image').valid"
+                [src]="previewImage"
+                [alt]="form.value.name"
             />
         </div>
         <mat-form-field>
