--- a/mean/src/app/components/client-list/client-list.component.css
+++ b/mean/src/app/components/client-list/client-list.component.css
@@ -5,3 +5,11 @@
 mat-spinner {
     margin: auto;
 }
+.cliente-imagem {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.cliente-imagem > img {
+    max-width: 50%;
+}
